# KanTu

./: MANIFEST.in  README.md  README_CN.md  pyproject.toml  requirements.txt  upload_pypi.bat  upload_pypi.sh
data/: sample_data.json
kantu/: __init__.py  __main__.py  api.py  app.py  cli.py  core.py  gui.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_core.py
